Fixing modal title size on mobile

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -914,3 +914,9 @@ body.login, body.register {
     }
   }
 }
+
+.modal-title{
+  @include media-breakpoint-down(md) {
+    font-size:14px !important;
+  }
+}
